Integrate mutation testing again + refactoring